# bobik-online

./: .env.dist  .env.docker  .gitignore  Dockerfile  README.rst  appserver-entrypoint.sh  docker-compose.yml  pyproject.toml
src/: manage.py
src/bobik_online/: asgi.py  settings.py  urls.py  wsgi.py
src/bobik_prompts/: admin.py  apps.py  models.py
src/bobik_prompts/migrations/: 0001_initial.py  0002_alter_bobikprompt_rodzaj.py
src/bobik_setup/: admin.py  apps.py  models.py  views.py
src/bobik_setup/migrations/: 0001_initial.py  0002_bobiksitesetup_admin_email.py  0003_bobiksitesetup_admin_password.py  0004_alter_bobiksitesetup_admin_email.py  0005_rename_bobiksitesetup_bobiksite.py  0006_checkpoints.py
src/bobik_tools/: apps.py  tools.py
src/bobik_web_chat/: apps.py  models.py  views.py
src/bobik_web_chat/migrations/: 0001_initial.py  0002_bobikchatparameters_prompt_sent.py  0003_rename_bobikchatparameters_bobikchat.py
src/bobik_web_chat/static/bobik_web_chat/css/: bobik_web_chat.css
src/bobik_web_chat/templates/bobik_web_chat/: bobikchat_chat.html  bobikchat_detail.html  bobikchat_form.html  bobikchatparameters_chat.html  bobikchatparameters_form.html
src/bobik_web_setup/: apps.py  models.py  views.py
src/bobik_web_setup/migrations/: 0002_bobiksitesetup_admin_email.py  0003_bobiksitesetup_admin_password.py  0004_alter_bobiksitesetup_admin_email.py
src/bobik_web_setup/templates/bobik_web_setup/: bobiksitesetup_form.html
