[tool.poetry]
name = "bobik-web"
version = "0.1.0"
description = "Web UI to the digital preanesthetic chat-bot Bobik"
authors = ["Michał Pasternak <michal.dtz@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
psycopg = "^3.2.1"
docutils = "^0.21.2"
django-environ = "^0.11.2"
langchain = "^0.2.16"
langgraph = "^0.2.19"
langchain-openai = "^0.1.23"
langchain-anthropic = "^0.1.23"
langchain-postgres = "^0.0.11"
langgraph-checkpoint-postgres = "^1.0.6"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
